gcc/testsuite/algol68/compile/mcts/idef10.a68
# { dg-options "-fstropping=upper" }  #

BEGIN INT count := 0;
      FOR i FROM 1 BY i DO count +:= 1 OD; # { dg-error "" }  #
      ASSERT (count = 0)
END
